Fix tariff tables on small screen sizes

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -62,17 +62,17 @@ section {
 
   @include responsive.xs() {
     max-width: 440px;
-    padding: 0 32px;
+    padding: 0 12px;
   }
 
   @include responsive.s() {
     max-width: 680px;
-    padding: 0 48px;
+    padding: 0 30px;
   }
 
   @include responsive.m() {
     max-width: 900px;
-    padding: 0 64px;
+    padding: 0 48px;
   }
 
   @include responsive.l() {
